school/lab1/main.tf
provider "aws" {
    region = "us-east-1"
}
 
data "aws_availability_zones" "available" {}
data "aws_region" "current" {}

resource "aws_vpc" "vpc" {
    cidr_block = var.vpc_cidr
    
    tags = {
        Name = var.vpc_name
        Environment = "demo_envrionment"
        Terraform = "true"
    }
}

resource "aws_subnet" "private_subnets" {
    for_each = var.private_subnets
    vpc_id = aws_vpc.vpc.id
    cidr_block = cidrsubnet(var.vpc_cidr, 8, each.value)
    availability_zone = tolist(data.aws_availability_zones.available.names)[each.value]
    
    tags = {
    Name = each.key
    Terraform = "true"
    }
}

resource "aws_subnet" "public_subnets" {
    for_each = var.public_subnets
    vpc_id = aws_vpc.vpc.id
    cidr_block = cidrsubnet(var.vpc_cidr, 8, each.value + 100)
    availability_zone = tolist(data.aws_availability_zones.available.names)[each.value]
    map_public_ip_on_launch = true
    
    tags = {
    Name = each.key
    Terraform = "true"
    }
}

resource "aws_route_table" "public_route_table" {
    vpc_id = aws_vpc.vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.internet_gateway.id
}
    tags = {
    Name = "demo_public_rtb"
    Terraform = "true"
    }
}

resource "aws_route_table" "private_route_table" {
    vpc_id = aws_vpc.vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat_gateway.id
}

    tags = {
    Name = "demo_private_rtb"
    Terraform = "true"
    }
}

resource "aws_route_table_association" "public" {
    depends_on = [aws_subnet.public_subnets]
    route_table_id = aws_route_table.public_route_table.id
    for_each = aws_subnet.public_subnets
    subnet_id = each.value.id
}

resource "aws_route_table_association" "private" {
    depends_on = [aws_subnet.private_subnets]
    route_table_id = aws_route_table.private_route_table.id
    for_each = aws_subnet.private_subnets
    subnet_id = each.value.id
}

resource "aws_internet_gateway" "internet_gateway" {
    vpc_id = aws_vpc.vpc.id
    tags = {
    Name = "demo_igw"
    }
}

resource "aws_eip" "nat_gateway_eip" {
    domain = "vpc"
    depends_on = [aws_internet_gateway.internet_gateway]
    tags = {
    Name = "demo_igw_eip"
    }
}

resource "aws_nat_gateway" "nat_gateway" {
    depends_on = [aws_subnet.public_subnets]
    allocation_id = aws_eip.nat_gateway_eip.id
    subnet_id = aws_subnet.public_subnets["public_subnet_1"].id
    tags = {
    Name = "demo_nat_gateway"
    }
}
